--- a/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
+++ b/src/app/pages/quotation/quotation-manage/quotation-manage.component.html
@@ -19,10 +19,10 @@
           </label>
           <div class="col-sm-8 d-flex align-items-center">
             <label class="radio radio-grey radio-primary radio-inline">
-              <input type="radio" formControlName="discount_type" value="0" [checked]="isRegulatoryAuditDisabled()">
+              <input type="radio" formControlName="discount_type" [value]="0" (change)="isRegulatoryAuditDisabled()">
               <span class="input-span"></span>Aucune</label>
             <label class="radio radio-grey radio-primary radio-inline">
-              <input type="radio" formControlName="discount_type" value="1" [checked]="isRegulatoryAuditDisabled()">
+              <input type="radio" formControlName="discount_type" [value]="1" (change)="isRegulatoryAuditDisabled()">
               <span class="input-span"></span>Ajouter une remise</label>
             <!-- <label class="radio radio-grey radio-primary radio-inline">
               <input type="radio" formControlName="discount_type" value="2">
