--- a/src/app/pages/sav/sav/sav.component.html
+++ b/src/app/pages/sav/sav/sav.component.html
@@ -17,7 +17,8 @@
                     <th>Reference</th>
                     <th>Produit</th>
                     <th>Marque</th>
-                    <th>Delais Approximatif</th>
+                    <th>Date de réception</th>
+                    <th>Date de livraison</th>
                     <th>Statut</th>
                     <th class="pr-4" style="width:91px;">Action</th>
                 </tr>
