--- a/src/app/pages/sav/sav-edit/sav-edit.component.html
+++ b/src/app/pages/sav/sav-edit/sav-edit.component.html
@@ -142,7 +142,7 @@
         </form>
       </div>
     </div>
-    <div class="col-lg-4">
+    <div class="col-lg-4" *ngIf="isAdmin">
         <div class="ibox-body">
             <h5 class="font-strong mb-4">INFORMATION GENERAL DU CLIENT</h5>
             <div class="row mb-2">
