--- a/src/app/pages/supplier/articles/article-supplier/article-supplier.component.html
+++ b/src/app/pages/supplier/articles/article-supplier/article-supplier.component.html
@@ -25,7 +25,7 @@
                   <th>Image</th>
                   <th>Designation</th>
                   <th>Statut</th>
-                  <th>Prix de vente</th>
+                  <th>Prix de revient</th>
                   <th>Prix Part.</th>
                   <th>%UF</th>
                   <th>Prix UF</th>
