--- a/src/app/pages/products/product-edit/product-edit.component.html
+++ b/src/app/pages/products/product-edit/product-edit.component.html
@@ -9,7 +9,7 @@
 
       <div class="ibox ibox-fullheight">
         <form class="ibox-body" [formGroup]="Form" id="supplier-form" (ngSubmit)="onSubmit()">
-          <p class="lead mb-4">Ajouter un produit</p>
+          <p class="lead mb-4">Modifier un produit</p>
           <div class="row">
             <div class="col-md-12">
               <div class="form-group mb-4">
@@ -41,28 +41,6 @@
                 <input class="form-control" autocomplete="off" formControlName="sku" id="sku" name="sku" type="text"
                   placeholder="">
                 <div *ngIf="f.sku.errors && f.sku.dirty">
-                  <label class="help-block error" for="name">Ce champ est obligatoire.</label>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="form-group mb-4">
-                <label class="font-light">Marge en <b>%</b></label>
-                <input class="form-control" autocomplete="off" formControlName="marge" id="marge" name="marge" type="text"
-                  placeholder="">
-                <div *ngIf="f.marge.errors && f.marge.dirty">
-                  <label class="help-block error" for="name">Ce champ est obligatoire.</label>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="form-group mb-4">
-                <label class="font-light">Marge revendeur en %</label>
-                <input class="form-control" autocomplete="off" formControlName="marge_dealer" id="marge_dealer" name="marge_dealer" type="text"
-                  placeholder="Marge en %">
-                <div *ngIf="f.marge_dealer.errors && f.marge_dealer.dirty">
                   <label class="help-block error" for="name">Ce champ est obligatoire.</label>
                 </div>
               </div>
