Trouver un moyen de télécharger les articles ou catalogue en format EXCEL

--- a/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.css
+++ b/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.css
@@ -1,3 +1,14 @@
 .status-switcher {
     cursor: pointer;
 }
+
+.search-quotation {
+    padding: 20px;
+    background-color: #5b4282;
+    color: white !important;
+}
+
+.search-quotation p,
+.search-quotation a {
+    color: white !important;
+} 
