--- a/src/app/pages/supplier/articles/article-supplier/article-supplier.component.html
+++ b/src/app/pages/supplier/articles/article-supplier/article-supplier.component.html
@@ -9,6 +9,7 @@
             un article</button>
           <button class="btn btn-sm btn-warning" data-toggle="modal" id="import-article">+ Importer des
             articles (Non recommandé)</button>
+            <app-to-excel></app-to-excel>
         </span>
       </div>
       <div class="ibox">
