--- a/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
+++ b/src/app/pages/quotation/quotation--datatable/quotation--datatable.component.html
@@ -1,35 +1,37 @@
 <div class="">
   <div class="search-quotation">
-<app-filter-search-article (findword)="onSearchWord($event)" [placeh]="'Vous cherchez un demande specifique?'">
-</app-filter-search-article>
+    <app-filter-search-article (findword)="onSearchWord($event)" [placeh]="'Vous cherchez un demande specifique?'">
+    </app-filter-search-article>
 
-<div>
-  <ul class="media-list media-list-divider" *ngIf="queryResults.length > 0">
+    <div>
+      <ul class="media-list media-list-divider" *ngIf="queryResults.length > 0">
 
-    <li class="media" *ngFor="let quotation of queryResults">
-      <a class="media-img" [routerLink]="['/dashboard', 'quotation', quotation.id]" routerLinkActive="router-link-active">
-        <button class="btn btn-secondary btn-icon-only btn-circle">
-          <i class="la la-cart-arrow-down"></i>
-        </button>
-      </a>
-      <div class="media-body d-flex">
-        <div class="flex-1">
-          <div class="media-heading">
-            {{quotation.customer_data.company_name !== "" ? quotation.customer_data.company_name : quotation.customer_data.last_name + " " + quotation.customer_data.company_name}}
+        <li class="media" *ngFor="let quotation of queryResults">
+          <a class="media-img" [routerLink]="['/dashboard', 'quotation', quotation.id]"
+            routerLinkActive="router-link-active">
+            <button class="btn btn-secondary btn-icon-only btn-circle">
+              <i class="la la-cart-arrow-down"></i>
+            </button>
+          </a>
+          <div class="media-body d-flex">
+            <div class="flex-1">
+              <div class="media-heading">
+                {{quotation.customer_data.company_name !== "" ? quotation.customer_data.company_name : quotation.customer_data.last_name + " " + quotation.customer_data.company_name}}
+              </div>
+              <p class="font-13 m-0 text-light">{{quotation.date_created}}</p>
             </div>
-          <p class="font-13 m-0 text-light">{{quotation.date_created}}</p>
-        </div>
-        <div class="text-right ml-2">
-          <h4 class="mb-1 font-strong">#{{quotation.id}}</h4>
-          <div class="text-muted">{{quotation.client_role === 'fz-company' ? 'Professionnel' : 'Particulier'}}</div>
-        </div>
-      </div>
-    </li>
-    
-  </ul>
-</div>
-  </div>
-  
+            <div class="text-right ml-2">
+              <h4 class="mb-1 font-strong">#{{quotation.id}}</h4>
+              <div class="text-muted">{{quotation.client_role === 'fz-company' ? 'Professionnel' : 'Particulier'}}</div>
+            </div>
+          </div>
+        </li>
+
+      </ul>
+    </div>
+  </div>  
+
+  <app-quote-add></app-quote-add>
 
   <app-status-quotation-switcher [quotation]="qtSelected"></app-status-quotation-switcher>
   <div class="ibox-head flex-row-reverse">
